# paper-fetcher

./: pyproject.toml
notebooks/: 01_basic_clean.ipynb  02_explo_semicolon.ipynb  03_explo_no_semicolon.ipynb  affi_clean.ipynb  exploration.ipynb
paper_fetcher/: __main__.py  affi_cleaner.py  clean.py  country.py  helpers.py  utils.py
