[project]
name = "paper-fetcher"
version = "0.1.0"
description = "library to analyse all papers using UK biobank data"
authors = [{name="Luis Giraldo González", email="luisggon@protonmail.com"}]
readme = "README.md"
requires-python=">=3.12"

dependencies = [
    "pandas (>=2.2.2, <3.0.0)",
    "beautifulsoup4 (>=4.12.3, <5.0.0)",
    "requests (>=2.32.3, <3.0.0)",
    "jupyter (>=1.0.0, <2.0.0)",
    "scikit-learn (>=1.5.0, <2.0.0)"
]

[tool.poetry.dependencies]

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
